crates/arity-parser/tests/snapshots/parser_snapshots__assignment_missing_rhs_eq_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..4
  ERROR@0..4
    IDENT@0..1 "a"
    WHITESPACE@1..2 " "
    ASSIGN_EQ@2..3 "="
    NEWLINE@3..4 "\n"
