crates/arity-parser/tests/snapshots/parser_snapshots__assignment_missing_rhs_eq_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected assignment right-hand side",
        start: 2,
        end: 3,
    },
]
