crates/arity-parser/tests/snapshots/parser_snapshots__assignment_right2_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..8
  ASSIGNMENT_EXPR@0..7
    INT@0..1 "1"
    WHITESPACE@1..2 " "
    SUPER_ASSIGN_RIGHT@2..5 "->>"
    WHITESPACE@5..6 " "
    IDENT@6..7 "a"
  NEWLINE@7..8 "\n"
