crates/arity-parser/tests/snapshots/parser_snapshots__assignment_string_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..10
  ASSIGNMENT_EXPR@0..9
    IDENT@0..1 "a"
    WHITESPACE@1..2 " "
    ASSIGN_LEFT@2..4 "<-"
    WHITESPACE@4..5 " "
    STRING@5..9 "\"hi\""
  NEWLINE@9..10 "\n"
