crates/arity-parser/tests/snapshots/parser_snapshots__call_arg_comment_before_unary_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..29
  ASSIGNMENT_EXPR@0..28
    IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    ASSIGN_LEFT@2..4 "<-"
    WHITESPACE@4..5 " "
    CALL_EXPR@5..28
      IDENT@5..6 "c"
      LPAREN@6..7 "("
      ARG_LIST@7..27
        NEWLINE@7..8 "\n"
        WHITESPACE@8..10 "  "
        ARG@10..12
          UNARY_EXPR@10..12
            MINUS@10..11 "-"
            INT@11..12 "1"
        COMMA@12..13 ","
        WHITESPACE@13..14 " "
        ARG@14..17
          COMMENT@14..17 "# a"
        NEWLINE@17..18 "\n"
        WHITESPACE@18..20 "  "
        ARG@20..22
          UNARY_EXPR@20..22
            MINUS@20..21 "-"
            INT@21..22 "2"
        WHITESPACE@22..23 " "
        ARG@23..26
          COMMENT@23..26 "# b"
        NEWLINE@26..27 "\n"
      RPAREN@27..28 ")"
  NEWLINE@28..29 "\n"
