crates/arity-parser/tests/snapshots/parser_snapshots__call_mixed_args_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..39
  CALL_EXPR@0..18
    IDENT@0..1 "f"
    LPAREN@1..2 "("
    ARG_LIST@2..17
      ARG@2..3
        INT@2..3 "1"
      COMMA@3..4 ","
      WHITESPACE@4..5 " "
      ARG@5..10
        IDENT@5..6 "x"
        WHITESPACE@6..7 " "
        ASSIGN_EQ@7..8 "="
        WHITESPACE@8..9 " "
        INT@9..10 "2"
      COMMA@10..11 ","
      WHITESPACE@11..12 " "
      ARG@12..17
        IDENT@12..13 "y"
        WHITESPACE@13..14 " "
        ASSIGN_EQ@14..15 "="
        WHITESPACE@15..16 " "
        INT@16..17 "3"
    RPAREN@17..18 ")"
  NEWLINE@18..19 "\n"
  CALL_EXPR@19..38
    IDENT@19..20 "g"
    LPAREN@20..21 "("
    ARG_LIST@21..37
      ARG@21..26
        BINARY_EXPR@21..26
          IDENT@21..22 "a"
          WHITESPACE@22..23 " "
          PLUS@23..24 "+"
          WHITESPACE@24..25 " "
          IDENT@25..26 "b"
      COMMA@26..27 ","
      WHITESPACE@27..28 " "
      ARG@28..37
        IDENT@28..29 "x"
        WHITESPACE@29..30 " "
        ASSIGN_EQ@30..31 "="
        WHITESPACE@31..32 " "
        BINARY_EXPR@32..37
          IDENT@32..33 "c"
          WHITESPACE@33..34 " "
          STAR@34..35 "*"
          WHITESPACE@35..36 " "
          IDENT@36..37 "d"
    RPAREN@37..38 ")"
  NEWLINE@38..39 "\n"
