crates/arity-parser/tests/snapshots/parser_snapshots__call_named_args_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..38
  CALL_EXPR@0..8
    IDENT@0..1 "f"
    LPAREN@1..2 "("
    ARG_LIST@2..7
      ARG@2..7
        IDENT@2..3 "x"
        WHITESPACE@3..4 " "
        ASSIGN_EQ@4..5 "="
        WHITESPACE@5..6 " "
        INT@6..7 "1"
    RPAREN@7..8 ")"
  NEWLINE@8..9 "\n"
  CALL_EXPR@9..24
    IDENT@9..10 "g"
    LPAREN@10..11 "("
    ARG_LIST@11..23
      ARG@11..16
        IDENT@11..12 "x"
        WHITESPACE@12..13 " "
        ASSIGN_EQ@13..14 "="
        WHITESPACE@14..15 " "
        INT@15..16 "1"
      COMMA@16..17 ","
      WHITESPACE@17..18 " "
      ARG@18..23
        IDENT@18..19 "y"
        WHITESPACE@19..20 " "
        ASSIGN_EQ@20..21 "="
        WHITESPACE@21..22 " "
        INT@22..23 "2"
    RPAREN@23..24 ")"
  NEWLINE@24..25 "\n"
  CALL_EXPR@25..37
    IDENT@25..26 "h"
    LPAREN@26..27 "("
    ARG_LIST@27..36
      ARG@27..36
        IDENT@27..28 "x"
        WHITESPACE@28..29 " "
        ASSIGN_EQ@29..30 "="
        WHITESPACE@30..31 " "
        BINARY_EXPR@31..36
          IDENT@31..32 "a"
          WHITESPACE@32..33 " "
          PLUS@33..34 "+"
          WHITESPACE@34..35 " "
          IDENT@35..36 "b"
    RPAREN@36..37 ")"
  NEWLINE@37..38 "\n"
